--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>notebook-app</module>
+        <module>notebook-app-repositories</module>
     </modules>
 
     <packaging>pom</packaging>
