--- a/notebook-app-repositories/src/main/resources/application-postgres.properties
+++ b/notebook-app-repositories/src/main/resources/application-postgres.properties
@@ -1,3 +1,3 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
-spring.datasource.data-username=postgres
-spring.datasource.data-password=Abc12345
+spring.datasource.username=postgres
+spring.datasource.password=Abc12345
